src/service/snapshots/tidx__service__tests__role_granted_cte_clickhouse.snap
---
source: src/service/mod.rs
expression: sig.to_cte_sql_clickhouse()
---
RoleGranted AS (
    SELECT block_num, block_timestamp, log_idx, tx_idx, 
           concat('0x', lower(substring(tx_hash, 3))) AS tx_hash,
           concat('0x', lower(substring(address, 3))) AS address, selector, topic1, topic2, topic3, data, concat('0x', substring(topic1, 3)) AS "role", concat('0x', lower(substring(topic2, 27))) AS "account", concat('0x', lower(substring(topic3, 27))) AS "sender"
    FROM logs
    WHERE selector = concat(char(92), 'x2f8788117e7eff1d82e926ec794901d17c78024a50270940304540a733656f0d')
)
