src/service/snapshots/tidx__service__tests__transfer_cte_postgres.snap
---
source: src/service/mod.rs
expression: sig.to_cte_sql_postgres()
---
Transfer AS (
    SELECT block_num, block_timestamp, log_idx, tx_idx, tx_hash, address, selector, topic1, topic2, topic3, data, abi_address(topic1) AS "from", abi_address(topic2) AS "to", abi_uint(substring(data FROM 1 FOR 32)) AS "value"
    FROM logs
    WHERE selector = '\xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef'
)
